Fix misnamed variable

--- a/BackLife.ipynb
+++ b/BackLife.ipynb
@@ -274,12 +274,12 @@
     "#    print (clause[0],(sorted(clause[1:])))\n",
     "res = glucose(cnf)\n",
     "if res[0] == 'SATISFIABLE':\n",
-    "    arr = np.zeros(2 * glid.shape[0] * glid.shape[1], dtype=bool)\n",
+    "    arr = np.zeros(2 * target.shape[0] * target.shape[1], dtype=bool)\n",
     "    for vs in res[1]:\n",
     "        v = int(vs)\n",
     "        arr[abs(v) - 1] = v > 0\n",
     "        \n",
-    "    arr = arr.reshape((2, glid.shape[0], glid.shape[1]))\n",
+    "    arr = arr.reshape((2, target.shape[0], target.shape[1]))\n",
     "    f, ax = plt.subplots(2)\n",
     "    ax[0].imshow(arr[0])\n",
     "    ax[1].imshow(arr[1])\n",
